--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "11.0.1",
@@ -18,6 +19,10 @@
     "@commitlint/config-conventional": "^13.1.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
-    "husky": "^7.0.1"
+    "husky": "^7.0.1",
+    "lint-staged": ">=10"
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix"
   }
 }
