--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-three/fiber": "^7.0.6",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
