--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-three/cannon": "^3.0.1",
+    "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
     "next": "11.0.1",
     "react": "17.0.2",
