--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-three/cannon": "^3.0.1",
     "@react-three/drei": "^7.5.0",
     "@react-three/fiber": "^7.0.6",
+    "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
     "next": "11.0.1",
     "react": "17.0.2",
