--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^7.0.6",
     "classnames": "^2.3.1",
     "framer-motion": "^4.1.17",
+    "lerp": "^1.0.3",
     "lorem-ipsum": "^2.0.3",
     "next": "11.0.1",
     "react": "17.0.2",
